--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@minecraft/debug-utilities": "^1.0.0-beta.1.21.111-stable",
-    "@minecraft/math": "^2.2.11",
-    "@minecraft/server": "^2.3.0-beta.1.21.111-stable"
+    "@minecraft/server": "^2.4.0-beta.1.21.120-stable",
+    "@minecraft/server-ui": "^2.1.0-beta.1.21.120-stable"
   },
   "repository": {
     "type": "git",
